--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bluebird": "^3.0.0",
     "cron": "^1.0.3",
     "request": "^2.34.0",
+    "sys": "0.0.1",
     "underscore": "^1.6.0"
   },
   "devDependencies": {
